<resources>
    <string name="app_name" translatable="false">Localizer</string>
    <string name="developer" translatable="false">Riccardo Gobbo</string>
    <string name="unipd_id" translatable="false">1224272</string>
    <string name="unipd_email" translatable="false">riccardo.gobbo.2@studenti.unipd.it</string>
    <string name="unipd_logo_description">UNIPD Logo</string>
    <string name="history_tab">history</string>
    <string name="graph_tab">graph</string>
    <string name="position_tab">position</string>
    <string name="position_main_label">current position</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="invalid_home_data">Invalid data</string>
    <string name="invalid_position_label" translatable="false">None</string>
    <string name="location_details_title_error">Error reading\nlocation details</string>
    <string name="invalid_location_detail">Unable to get location read on\n<![CDATA[<b>%1$s</b>]]> at <![CDATA[<b>%2$s</b>]]></string>
    <string name="invalid_location_detail_compat">"Unable to get location read on %1$s at  %2$s "</string>
    <string name="location_details_title">location details</string>
    <string name="time_location_detail">Read time: <![CDATA[<b>%1$s</b>]]> at <![CDATA[<b>%2$s</b>]]></string>
    <string name="latitude_read_detail">Latitude read: <![CDATA[<b>%1$s</b>]]></string>
    <string name="longitude_read_detail">Longitude read: <![CDATA[<b>%1$s</b>]]></string>
    <string name="altitude_read_detail">Altitude read: <![CDATA[<b>%1$s</b>]]></string>
    <string name="time_location_detail_compat">Read time: %1$s at %2$s </string>
    <string name="latitude_read_detail_compat">Latitude read: %1$s</string>
    <string name="longitude_read_detail_compat">Longitude read: %1$s</string>
    <string name="altitude_read_detail_compat">Altitude read: %1$s</string>
    <string name="back_button_description" translatable="false">back_to_location_list</string>
    <string name="altitude_label">Altitude</string>
    <string name="num_of_element">Number of element <![CDATA[<b>%1$d</b>]]> </string>
    <string name="num_of_element_compat">Number of elements %1$d</string>
    <string name="start_background_service">Enable background service</string>
    <string name="running_service" translatable="false">start</string>
    <string name="service_not_running" translatable="false">stop</string>
    <string name="starting_background_service">Background service enabled!</string>
    <string name="stopping_background_service">Background service disabled!</string>
    <string name="channel_name">Background Localizer Service</string>
    <string name="channel_description">Localizer notification about background service</string>
    <string name="app_description">Locations are being saved</string>
    <string name="delete_locations" translatable="false">delete_locations</string>
    <string name="delete_all_locations">Delete all location stored</string>
    <string name="invalid_location_hint">Can\'t read a deleted location details</string>
    <string name="loading_details">Loading..</string>
    <string name="elements_deleted">All saved items  have been deleted</string>
    <string name="permissions_denied">Required permissions are denied!</string>
    <string name="locations_chart_title">Trend of meters between read locations\n(based on saved data)</string>
    <string name="altitudes_chart_title">Trend of altitudes read\n(based on saved data)</string>
    <string name="error">An error occurred %1$s</string>
    <string name="tooFewItems">There are too few items to show into the charts</string>
    <string name="noData">There are no data to show into the charts</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="max_num_stored">Maximum number of locations stored: <![CDATA[<b>%1$d</b>]]></string>
    <string name="max_num_stored_comp">Maximum number of locations stored: %1$d</string>
    <string name="max_minute_label">Select the maximum age [min] of stored items</string>
    <string name="max_number_data">Max number of stored data: %1$d</string>
    <string name="background_button_hint">Button to enable/disable background location service</string>
    <string name="delete_warning">Click this button to erase all data stored</string>
    <string name="no_index" translatable="false">-</string>
</resources>