<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <!--  Title bar  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/div_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            app:flow_horizontalBias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/unipd_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/unipd_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/unipd_logo_description"
            android:src="@drawable/unipd_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/unipd_email"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/developer"
            android:textColor="@color/white"
            android:textSize="@dimen/developer_info"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintLeft_toLeftOf="@id/unipd_email"

            app:layout_constraintTop_toTopOf="@+id/unipd_logo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/unipd_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/unipd_id"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintLeft_toLeftOf="@id/unipd_email"
            app:layout_constraintTop_toBottomOf="@+id/developer"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/unipd_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/unipd_email"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unipd_id"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tab bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/div_title">

        <TextView
            android:id="@+id/position_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tab_padding"
            android:text="@string/position_tab"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/tab_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/history_button"
            app:layout_constraintTop_toTopOf="@id/tab_menu" />

        <TextView
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tab_padding"
            android:text="@string/history_tab"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/tab_menu"
            app:layout_constraintLeft_toRightOf="@id/position_button"
            app:layout_constraintRight_toLeftOf="@id/graph_button"
            app:layout_constraintTop_toTopOf="@id/tab_menu" />

        <TextView
            android:id="@+id/graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tab_padding"
            android:text="@string/graph_tab"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:background="@drawable/selected_tab"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/tab_menu"
            app:layout_constraintLeft_toRightOf="@id/history_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tab_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Not enough data label -->
    <TextView
        android:id="@+id/not_enough_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/tab_menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <!-- Charts layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <TextView
            android:id="@+id/locations_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="2"
            android:paddingVertical="5dp"
            android:text="@string/locations_chart_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartLocations"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/altitude_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/altitudes_chart_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartAltitudes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>